--- a/components/component.html
+++ b/components/component.html
@@ -1,1 +1,139 @@
-<htm
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Component Library</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+</head>
+<body>
+    <h1>component library</h1>
+    <p>Hi all, this is a component library created by me for learning and practising <strong>HTML & CSS</strong> from it's basics.
+        Feel free to inspect if you like any of the components for using them in future.</p>
+    <hr>
+
+    <h2>@typography</h2>
+
+    <h1>This is the biggest h1 heading </h1>
+    <h2>This is second biggest h2 heading.</h2>
+    <h3>h3 heading.</h3>
+    <h4>h4 heading.</h4>
+    <h5>h5 heading.</h5>
+    <h6>h6 heading.</h6>
+    <p>This is normal text. Long running text would look like this on your website. This will auto fold based on the width</p>
+    <small>This is relatively small text.</small>
+    <hr>
+
+    <h2>@containers</h2>
+
+    <h3>>fluid container</h3>
+    <div class="container-fluid">
+        This is a fluid container with full width of page along with some margin.
+    </div>
+    <h3>>center container</h3>
+    <div class="container">
+        This is a center container with a given width and center content.
+    </div>
+    <hr>
+
+    <h2>@links</h2>
+
+    <a class="primary-link" href="/">Primary link</a>
+    <a class="secondary-link" href="/">Secondary link</a>
+    <hr>
+
+    <h2>@lists</h2>
+
+    <h3>>unordered lists</h3>
+    <p>We don't want to show bullets in the unordered list. We'll remove that with CSS.</p>
+    <ul class="no-bullet">
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+    <h3>>inline lists</h3>
+    <p>Instead of going in a new row, we will create a list which will take columns.</p>
+    <ul class="no-bullet -inline">
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+    <h3>>reversed ordered lists</h3>
+    <p>Counting of will go reverse for this list.</p>
+    <ol reversed>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ol>
+    <hr>
+
+    <h2>@nav</h2>
+
+    <p>Navigation is used on the top of the page and used to get to different pages.</p>
+    <p>I've used gradient here.</p>
+    <nav class="navigation">
+        <div class="container-fluid">
+            <div class="brand-name">NeneComapany</div>
+            <ul class="no-bullet -inline">
+                <li>
+                    <a href="/" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="/">About</a>
+                </li>
+                <li>
+                    <a href="/">Blogs</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <hr>
+
+    <h2>@header</h2>
+    <header>
+        <img src="../sun.svg">
+        <h3>If you're <i>changing</i> the world, you're <i>working</i> on important things. You're <i>excited</i> to get up in the morning.</h3>
+    </header>
+    <hr>
+
+    <h2>@section</h2>
+    
+    <p> A section is used to separate parts of pages. In marketing websites you would have seen a header followed by sections of features, team, pricing, contact info etc.</p>
+    <h2>>normal section</h2>
+    <section class="section">
+        <h3>heading inside section</h3>
+        <p>Text defining this section & many more stuffs</p>
+        <a href="/" class="primary-link">Primary button</a>
+    </section>
+
+    <h2>>an off white section</h2>
+    <section class="section -ow">
+        <h3>heading inside off white section</h3>
+        <p>Text defining this section & many more stuffs</p>
+        <a href="/" class="secondary-link">Secondary button</a>
+    </section>
+    <hr>
+
+    <h2>@footer</h2>
+
+    <footer class="footer">
+        <div class="container">header w/ socials
+            <ul class="no-bullet -inline">
+                <li>
+                    <a href="/">socialone</a>
+                </li>
+                <li>
+                    <a href="/">socialtwo</a>
+                </li>
+                <li>
+                    <a href="/">socialthree</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
