--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+:root {
+    --primary-color: #BE185D;
+    --secondary-color: #fc80b4;
+    --dark-gray: #615a5a;
+    --off-white: #f3f4f6;
+}
 .site-header{
-        background-color: #a3b1ec;
+        background-color: var(--secondary-color);
         color: azure;
         height: 100vh;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -14,12 +21,96 @@
     width: 200px;
     height: 200px;
 }
-.site-content{
-    margin: 10px;
-}
 .course-link{
     color: azure;
 }
 body{
-    margin: 0%;
+    margin: 20px;
+    font-family: 'Open Sans', sans-serif;
+}
+hr{
+    margin: 30px 0px;
+}
+.container{
+    /* display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    display:block;
+    text-align: center;
+}
+.container-fluid {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.primary-link{
+    text-decoration: none;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+}
+.secondary-link{
+    text-decoration: none;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+}
+.no-bullet{
+    list-style: none;
+}
+.-inline li {
+    display: inline;
+    padding: 0.5rem;
+}
+.navigation{
+    background-color: var(--primary-color);
+    background-image: linear-gradient(to bottom right, var(--primary-color),var(--secondary-color));
+    color: white;
+    padding: 1rem 1rem;
+    border-bottom-left-radius: 0.5rem;
+}
+.navigation .brand-name{
+    font-weight: bold;
+}
+.navigation ul{
+    text-align: right;
+}
+.navigation li a{
+    color:white;
+    text-decoration: none;
+
+}
+.active{
+    font-weight: bold;
+}
+header img{
+    margin:auto;
+    max-width: 350px;
+    display: block;
+}
+header h3{
+    text-align: center;
+    color: var(--dark-gray);
+}
+.section {
+    display: block;
+    padding: 0.5rem 0rem 2rem;
+    text-align: center;
+}
+.-ow{
+    background-color: var(--off-white);  
+}
+.footer li a{
+    text-decoration: none;
+    color: white
+}
+.footer{
+    color: white;
+    background-color: var(--primary-color);
+    background-image: linear-gradient(to bottom left, var(--secondary-color), var(--primary-color));
+    border-top-right-radius: 0.5rem;
+    font-weight: bold;
+    padding: 2rem;
 }
