--- a/css/main.css
+++ b/css/main.css
@@ -2,31 +2,39 @@
 :root {
     --primary-color: #BE185D;
     --secondary-color: #fc80b4;
+    --bg-color: #ffd2e5;
     --dark-gray: #615a5a;
     --off-white: #f3f4f6;
 }
 .site-header{
-        background-color: var(--secondary-color);
-        color: azure;
+        background-color: var(--bg-color);
+        color: white;
         height: 100vh;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
 }
+.site-header img{
+    margin: 200px;
+}
+.site-header h3{
+    text-align: left;
+}
 .profile{
-    box-shadow:#5264a6 2px 5px 5px;
+    box-shadow:var(--dark-gray) 2px 5px 5px;
     border-radius: 50%;
     width: 200px;
     height: 200px;
 }
-.course-link{
-    color: azure;
+.colored-text{
+    color: var(--primary-color);
 }
 body{
-    margin: 20px;
     font-family: 'Open Sans', sans-serif;
+    margin: auto;
+}
+.component-body{
+    margin: 10px;
 }
 hr{
     margin: 30px 0px;
