add: added footer

--- a/css/main.css
+++ b/css/main.css
@@ -7,18 +7,11 @@
     --off-white: #f3f4f6;
 }
 .site-header{
-        background-color: var(--bg-color);
-        color: white;
-        height: 100vh;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        display: flex;
-        align-items: center;
-}
-.site-header img{
-    margin: 200px;
-}
-.site-header h3{
-    text-align: left;
+    background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
 }
 .profile{
     box-shadow:var(--dark-gray) 2px 5px 5px;
@@ -93,13 +86,15 @@ hr{
 .active{
     font-weight: bold;
 }
+header {
+    text-align: center;
+}
 header img{
     margin:auto;
     max-width: 350px;
     display: block;
 }
 header h3{
-    text-align: center;
     color: var(--dark-gray);
 }
 .section {
