--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    padding: 50px;
 }
 .profile{
     box-shadow:var(--dark-gray) 2px 5px 5px;
