add: blogs, projects

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <title>Neha Gupta</title>
+    <title>Neha Gupta | About</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="../../css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,10 +12,10 @@
             <div class="brand-name"><i> < Neha Gupta /></i></div>
             <ul class="no-bullet -inline">
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/components/about/about.html">About</a>
+                    <a href="/components/about/about.html" class="active">About</a>
                 </li>
                 <li>
                     <a href="/components/projects/projects.html">Projects</a>
@@ -27,7 +27,7 @@
         </div>
     </nav>
         <header class="site-header">
-            <img class="profile" src="assets/neha.jpeg">
+            <img class="profile" src="../neha.jpeg">
             <h1>
                 Hi, I'm <span class="colored-text">Neha Gupta</span>. I am <span class="colored-text">22</span> years old, living in <span class="colored-text">Delhi</span>.
             </h1>
@@ -48,8 +48,8 @@
 
         <section class="section">
             <h2>Projects</h2>
-            <p>checkout my creations!</p>
-            <a href="/components/projects/projects.html" class="secondary-link">Check projects</a>
+            <p>Checkout my creations!</p>
+            <a href="/components/projects/projects.html" class="secondary-link">Projects</a>
         </section>
 
         <section class="section -ow">
