--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -5,22 +5,25 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Component Library</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../css/main.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
     <nav class="navigation">
         <div class="container-fluid">
-            <div class="brand-name">Neha Gupta</div>
+            <div class="brand-name"><i> < Neha Gupta /></i></div>
             <ul class="no-bullet -inline">
                 <li>
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/">About</a>
+                    <a href="/components/about/about.html">About</a>
                 </li>
                 <li>
-                    <a href="/components/component.html" class="active">Blogs</a>
+                    <a href="/components/projects/projects.html">Projects</a>
+                </li>
+                <li>
+                    <a href="/components/blogs/blogs.html" class="active">Blogs</a>
                 </li>
             </ul>
         </div>
@@ -112,7 +115,7 @@
 
         <h2>@header</h2>
         <header>
-            <img src="../sun.svg">
+            <img src="../../assets/sun.svg">
             <h3>If you're <i>changing</i> the world, you're <i>working</i> on important things. You're <i>excited</i> to get up in the morning.</h3>
         </header>
         <hr>
