--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,11 @@
 :root {
     --primary-color: #BE185D;
     --secondary-color: #fc80b4;
-    --bg-color: #ffd2e5;
+    --bg-color: #fd9ec6;
     --dark-gray: #615a5a;
     --off-white: #f3f4f6;
 }
 .site-header{
-    background-color: var(--bg-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,6 +31,15 @@ body{
 hr{
     margin: 30px 0px;
 }
+.article{  
+    text-align: left;
+    display: inline-block;
+    padding: 3rem;
+    width: -webkit-fill-available;
+}
+h1{
+    font-size: 3em;
+}
 .container{
     /* display:flex;
     flex-direction: column;
@@ -39,6 +47,8 @@ hr{
     align-items: center; */
     display:block;
     text-align: center;
+    margin: auto;
+    width: 700px;
 }
 .container-fluid {
     padding-left: 1rem;
