fix: container alignment

--- a/components/blogs/blogs.html
+++ b/components/blogs/blogs.html
@@ -49,7 +49,7 @@
             </li>
         </ul>
         <footer class="footer">
-            <div class="container">connect with me on socials
+            <div>connect with me on socials
                 <ul class="no-bullet -inline">
                     <li>
                         <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
