--- a/components/about/about.html
+++ b/components/about/about.html
@@ -58,7 +58,7 @@
             <a href="/components/blogs/blogs.html" class="primary-link">Check blogs</a>
         </section>
         <footer class="footer">
-            <div class="container">connect with me on socials
+            <div>connect with me on socials
                 <ul class="no-bullet -inline">
                     <li>
                         <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
