feat: about page + favicon

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -4,6 +4,7 @@
     <title>Neha Gupta | About</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../css/main.css" rel="stylesheet">
+    <link href="../../assets/favicon.ico" rel="icon">
 </head>
 
 <body>
@@ -26,52 +27,67 @@
             </ul>
         </div>
     </nav>
-        <header class="site-header">
-            <img class="profile" src="../neha.jpeg">
-            <h1>
-                Hi, I'm <span class="colored-text">Neha Gupta</span>. I am <span class="colored-text">22</span> years old, living in <span class="colored-text">Delhi</span>.
-            </h1>
-            <h3>
-                I am learning full stack development for now.
-            </h3>
-            <h5>
-                connect w/ me @<a class="colored-text" href="https://nayyyhaa.github.io/">nayyhaa land</a>
-            </h5>
-        </header>
+    <div class="container-about -row">
+        <div class="col">
 
-        <section class="section -ow">
-            <h2>Technologies</h2>
-            <p> Currently working on Angular based project and building up my skills in HTML5, CSS, Javascript and Typescript.</p>
-
-            <p>I love the beauty of problem solving. Hence, sudoku and coding questions on leet code and Hackerrank are my mates. For programming, I am proficient in Java, C++ and Python. </p>          
-        </section>
-
-        <section class="section">
-            <h2>Projects</h2>
-            <p>Checkout my creations!</p>
-            <a href="/components/projects/projects.html" class="secondary-link">Projects</a>
-        </section>
-
-        <section class="section -ow">
-            <h2>Blogs</h2>
-            <p>I like to write technical and non technical blogs. </p>
-            <a href="/components/blogs/blogs.html" class="primary-link">Check blogs</a>
-        </section>
-        <footer class="footer">
-            <div>connect with me on socials
-                <ul class="no-bullet -inline">
-                    <li>
-                        <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nayyyhaa">@github</a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/nayyyhaa">@twitter</a>
-                    </li>
+            <h3 class="colored-text -title">Summary</h3>
+            <div class="about-item">
+                <h3>Neha Gupta</h3>
+                <p> Currently working on Angular based project and building up my skills in HTML5, CSS, Javascript and Typescript.</p>
+                <p>I love the beauty of problem solving. Hence, sudoku and coding questions on leet code and Hackerrank are my mates. For programming, I am proficient in Java, C++ and Python. </p>
+                <ul>
+                    <li>Noida, India</li>
+                    <li>nehaguptang.ng@gmail.com</li>
                 </ul>
             </div>
-        </footer>
+
+            <h3 class="colored-text -title">Education</h3>
+            <div class="about-item">
+                <h3>Bachelors of Technology, Computer Science & Engineering</h3>
+                <h4>GL Bajaj Institute of Technology and Management</h4>
+                <h5>August, 2016 - September, 2020</h5>
+                <p><em>Greater Noida, U.P, India</em></p>       
+                <p>My Coursework at GL Bajaj Institute of Technology and Management included DBMS, Compiler Design, Software Engineering, Operating Systems. I learned a lot about software development and its use cases from my coursework throughout my time.</p>
+            </div>
+            
+        </div>
+        <div class="col">
+
+            <h3 class="colored-text -title">Work Experience</h3>
+            <div class="about-item">
+                <h3>Application Development Analyst</h3>
+                <h4>Accenture</h4>
+                <h5>November, 2020 - Present</h5>
+                <p><em>Bangalore, Karnataka, India</em></p>       
+                <p> Currently working on Accenture's internal Project.</p>
+                <p><strong>Teck Stack: </strong>Angular 11, Typescript, Javascript, HTML, CSS, Git</p>
+            </div>
+            <div class="about-item">
+                <h3>Software Development Intern</h3>
+                <h4>Virtusa</h4>
+                <h5>June, 2019 - August, 2020</h5>
+                <p><em>Chennai, T.N, India</em></p>     
+                <p>I got myself into learning web development. I have worked on building various components like breadcrumbs, pagination, form field, grid-list, etc. for Employee management portal using Angular 6.</p>
+                <p><strong>Teck Stack: </strong>Angular 6, Typescript, Javascript, HTML, CSS, Git</p>
+            </div>
+
+        </div>    
+    </div>
+    <footer class="footer">
+        <div>connect with me on socials
+            <ul class="no-bullet -inline">
+                <li>
+                    <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/nayyyhaa">@github</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/nayyyhaa">@twitter</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
    
 </body>
 
