--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -6,7 +6,8 @@
     <title>Component Library</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../../css/main.css'>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">  
+    <link href="../../assets/favicon.ico" rel="icon">
 </head>
 <body>
     <nav class="navigation">
