--- a/components/blogs/blogs.html
+++ b/components/blogs/blogs.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>Neha Gupta | Projects</title>
+    <title>Neha Gupta | Blogs</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="../../css/main.css" rel="stylesheet">
+    <link href="../../css/main.css" rel="stylesheet">   
+    <link href="../../assets/favicon.ico" rel="icon">
 </head>
 
 <body>
@@ -36,7 +37,6 @@
                 I've just started blogging and documenting my journey. Hope you like it!
             </h3>
         </header>
-        <hr>
 
         <ul class="no-bullet container">
             <li>
