--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -4,6 +4,7 @@
     <title>Neha Gupta | Projects</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../css/main.css" rel="stylesheet">
+    <link href="../../assets/favicon.ico" rel="icon">
 </head>
 
 <body>
