feat: project gtag

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -5,6 +5,15 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../css/main.css" rel="stylesheet">
     <link href="../../assets/favicon.ico" rel="icon">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKKH932BTD"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EKKH932BTD');
+    </script>
 </head>
 
 <body>
