--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -47,8 +47,18 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article">
+                    <h2>Shakespeare Translator</h2>
+                    <small>April, 2021</small>
+                    <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
+                    <p>This translator takes English as input and converts to Shakespeare English. Created using VanillaJs.</p>       
+                    <a href="https://iamshakespeare.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/shakespeare-translator" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article">
                     <h2>Find My Destiny</h2>
-                    <small>7th, April, 2021</small>
+                    <small>April, 2021</small>
                     <p>Can you guess the correct number between 1 - 100?</p>
                     <p>It's a simple app created with concepts of VanillaJs</p>       
                     <a href="https://find-my-destiny.netlify.app/" class="primary-link">Live Project</a>
@@ -58,7 +68,7 @@
             <li>
                 <article class="article">
                     <h2>NeneXone</h2>
-                    <small>7th, April, 2021</small>
+                    <small>March, 2021</small>
                     <p>Love to shop? Then check out the website that I made.</p>
                     <p>NeneXone is an e-commerce website made using the concepts of Angular.</p>       
                     <a href="https://nenexone.netlify.app/" class="primary-link">Live Project</a>
@@ -68,7 +78,7 @@
             <li>
                 <article class="article">
                     <h2>My Piggy Bank</h2>
-                    <small>7th, April, 2021</small>
+                    <small>March, 2021</small>
                     <p>Always have trouble while managing your expenses? Worry not! MyPiggyBank is a web application helping you with finances.</p> 
                     <p>This website is created using VanillaJs.</p>      
                     <a href="https://mypiggybank.netlify.app/" class="primary-link">Live Project</a>
@@ -78,7 +88,7 @@
             <li>
                 <article class="article">
                     <h2>Words Jungle</h2>
-                    <small>7th, April, 2021</small>
+                    <small>March, 2021</small>
                     <p>I struggle with understanding the meaning of some words. Do you too? If yes, then see this dictionary-app.</p> 
                     <p>Made using ReactJS with love.</p>      
                     <a href="https://words-jungle.netlify.app/" class="primary-link">Live Project</a>
@@ -88,7 +98,7 @@
             <li>
                 <article class="article">
                     <h2>Do you know me?</h2>
-                    <small>7th, April, 2021</small>
+                    <small>March, 2021</small>
                     <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
                     <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/do-you-know-me" class="secondary-link">View Source</a>
