--- a/components/blogs/blogs.html
+++ b/components/blogs/blogs.html
@@ -41,10 +41,12 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article">
-                    <h2>Learn component library</h2>
-                    <small>7th, April, 2021</small>
-                    <p> Basic component library for beginners to refer along.</p>       
-                    <a href="/components/blogs/component.html" class="primary-link">Read blog</a>
+                    <h2>Build your own Shakespeare Translation Web App with JavaScript Fetch API</h2>
+                    <small>April, 2021</small>
+                    <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??
+                        Learn how to build English to Shakespeare text translator using with JavaScript Fetch API.
+                    </p>       
+                    <a href="https://dev.to/nayyyhaa/build-your-own-shakespeare-translation-web-app-with-javascript-fetch-api-loo" class="primary-link">Read blog</a>
                 </article>
             </li>
         </ul>
