add: added projects

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -47,6 +47,26 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article">
+                    <h2>Travel with me</h2>
+                    <small>April, 2021</small>
+                    <p>Confused about where to travel next? This vacation destination recommendation app is your solution</p>
+                    <p>Made using ReactJS with love.</p>       
+                    <a href="https://travelalong.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/travel-recommendation" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article">
+                    <h2>Emoji Jungle</h2>
+                    <small>April, 2021</small>
+                    <p>Dunno what are these emojis? Worry not! This emoji-pedia is there to help you.</p>
+                    <p>Made using ReactJS with love.</p>       
+                    <a href="https://7uk7s.csb.app/" class="primary-link">Live Project</a>
+                    <a href="https://codesandbox.io/s/emoji-predictor-7uk7s" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article">
                     <h2>Shakespeare Translator</h2>
                     <small>April, 2021</small>
                     <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
@@ -56,6 +76,15 @@
                 </article>
             </li>
             <li>
+                <article class="article">
+                    <h2>Minion Speaks</h2>
+                    <small>April, 2021</small>
+                    <p>This app converts your English text into equivalent Minionese text.</p>
+                    <p>Made using ReactJS with love.</p>       
+                    <a href="https://letsbanana.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/minion-speaks" class="secondary-link">View Source</a>
+                </article>
+            </li>
                 <article class="article">
                     <h2>Find My Destiny</h2>
                     <small>April, 2021</small>
@@ -97,10 +126,21 @@
             </li>
             <li>
                 <article class="article">
+                    <h2>What's the Capital quiz</h2>
+                    <small>March, 2021</small>
+                    <p>ake The Quiz: How Many Capital Cities Can You Name?</p>
+
+                    <p>This is a CLI App in Javascript using Chalk Library for terminal string styling.</p>      
+                    <a href="https://replit.com/@nayyyhaa/whats-the-capital-quiz?embed=1&output" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/what-s-the-capital-quiz" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article">
                     <h2>Do you know me?</h2>
                     <small>March, 2021</small>
                     <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
-                    <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha" class="primary-link">Live Project</a>
+                    <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha?embed=1&output" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/do-you-know-me" class="secondary-link">View Source</a>
                 </article>
             </li>
