feat: typography in components

--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -43,8 +43,11 @@
         <h4>h4 heading.</h4>
         <h5>h5 heading.</h5>
         <h6>h6 heading.</h6>
-        <p>This is normal text. Long running text would look like this on your website. This will auto fold based on the width</p>
-        <small>This is relatively small text.</small>
+        <p>This is normal text. Long running text would look like this on your website. This will auto fold based on the width.</p>
+        <p><small>This is relatively < small > text.</small></p>
+        <p><del>This is < del >text.</del></p>
+        <p><strong>This is a < strong >  text.</strong></p>
+        <p><em>Some italic style here with < i > tag or < em > tag.</></p>
         <hr>
 
         <h2>@containers</h2>
