--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -47,7 +47,7 @@
         <p><small>This is relatively < small > text.</small></p>
         <p><del>This is < del >text.</del></p>
         <p><strong>This is a < strong >  text.</strong></p>
-        <p><em>Some italic style here with < i > tag or < em > tag.</></p>
+        <p><em>Some italic style here with < i > tag.</em></p>
         <hr>
 
         <h2>@containers</h2>
@@ -119,7 +119,7 @@
 
         <h2>@header</h2>
         <header>
-            <img src="../../assets/sun.svg">
+            <img src="../../assets/sun.svg" alt="sun">
             <h3>If you're <i>changing</i> the world, you're <i>working</i> on important things. You're <i>excited</i> to get up in the morning.</h3>
         </header>
         <hr>
@@ -140,6 +140,19 @@
             <p>Text defining this section & many more stuffs</p>
             <a href="/" class="secondary-link">Secondary button</a>
         </section>
+        <hr>
+
+        <h2>@forms</h2>
+
+        <p>Forms are used to collect user data</p>
+        <p>For now we are redirecting action to dummy html page (in new tab with target="_blank"). Action sends our data to specified URL after clicking on "submit" button.</p>
+        <form class="form" target="_blank" action="./sucess.html">
+            <label for="user">Username: </label> <!--links label to input -> automatically selects input on clicking label. -->
+            <input type="text" id="user"><br>
+            <label for="email">Email ID:</label>
+            <input type="email" id="email">
+            <button type="submit" class="primary-link">Submit!</button>
+        </form>
         <hr>
 
         <h2>@footer</h2>
