--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,12 @@ header h3{
 .-ow{
     background-color: var(--off-white);  
 }
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .footer li a{
     text-decoration: none;
     color: white
