--- a/components/about/about.html
+++ b/components/about/about.html
@@ -27,52 +27,52 @@
             </ul>
         </div>
     </nav>
+
     <div class="container-about -row">
         <div class="col">
 
-            <h3 class="colored-text -title">Summary</h3>
+            <h3 class="colored-text -title">About</h3>
             <div class="about-item">
                 <h3>Neha Gupta</h3>
-                <p> Currently working on Angular based project and building up my skills in HTML5, CSS, Javascript and Typescript.</p>
-                <p>I love the beauty of problem solving. Hence, sudoku and coding questions on leet code and Hackerrank are my mates. For programming, I am proficient in Java, C++ and Python. </p>
+                <p> Every person has their unique story. Here is a glimpse into mine.
+                    My name is <span class="colored-text">Neha Gupta</span>. I am a <span class="colored-text">full stack Web Developer</span>.</p>
+                <p>While here, I grew interest in Websites and started learning about them on my own and one thing led to another and made me a Web developer.</p>
+                
+                <p>Feel free to explore the rest of my page as I hope you enjoy reading it as much as I have enjoyed creating it!</p>
+                <!-- <p>I love the beauty of problem solving. Hence, sudoku and coding questions on leet code and Hackerrank are my mates. For programming, I am proficient in Java, C++ and Python. </p>
                 <ul>
                     <li>Noida, India</li>
                     <li>nehaguptang.ng@gmail.com</li>
-                </ul>
-            </div>
-
-            <h3 class="colored-text -title">Education</h3>
-            <div class="about-item">
-                <h3>Bachelors of Technology, Computer Science & Engineering</h3>
-                <h4>GL Bajaj Institute of Technology and Management</h4>
-                <h5>August, 2016 - September, 2020</h5>
-                <p><em>Greater Noida, U.P, India</em></p>       
-                <p>My Coursework at GL Bajaj Institute of Technology and Management included DBMS, Compiler Design, Software Engineering, Operating Systems. I learned a lot about software development and its use cases from my coursework throughout my time.</p>
+                </ul> -->
             </div>
             
         </div>
         <div class="col">
-
-            <h3 class="colored-text -title">Work Experience</h3>
-            <div class="about-item">
-                <h3>Application Development Analyst</h3>
-                <h4>Accenture</h4>
-                <h5>November, 2020 - Present</h5>
-                <p><em>Bangalore, Karnataka, India</em></p>       
-                <p> Currently working on Accenture's internal Project.</p>
-                <p><strong>Teck Stack: </strong>Angular 11, Typescript, Javascript, HTML, CSS, Git</p>
-            </div>
-            <div class="about-item">
-                <h3>Software Development Intern</h3>
-                <h4>Virtusa</h4>
-                <h5>June, 2019 - August, 2020</h5>
-                <p><em>Chennai, T.N, India</em></p>     
-                <p>I got myself into learning web development. I have worked on building various components like breadcrumbs, pagination, form field, grid-list, etc. for Employee management portal using Angular 6.</p>
-                <p><strong>Teck Stack: </strong>Angular 6, Typescript, Javascript, HTML, CSS, Git</p>
-            </div>
-
-        </div>    
+            <img class="profile" src="../../assets/neha.jpeg">
+        </div> 
     </div>
+    <section class="section -ow">
+        <h3 class="colored-text -title">Skills</h3>
+        <div class="about-section flex-about -row">
+            <ul class="no-bullet">
+                <li><h5>HTML5 / CSS3</h5></li>
+                <li><h5>JavaScript</h5></li>
+                <li><h5>Reactjs</h5></li>
+                <li><h5>NodeJS/ExpressJs</h5></li>
+                <li><h5>MongoDB</h5></li>
+                
+            </ul>
+            <ul class="no-bullet">
+                <li><h5>Angular</h5></li>
+                <li><h5>Bootstrap / MaterializeCSS</h5></li>
+                <li><h5>C++</h5></li>
+                <li><h5>Java</h5></li>
+                <li><h5>Spring Boot</h5></li>
+            </ul>
+        </div>
+        </div>
+        </section>
+    
     <footer class="footer">
         <div>connect with me on socials
             <ul class="no-bullet -inline">
