--- a/components/about/about.html
+++ b/components/about/about.html
@@ -47,7 +47,7 @@
             </div>
             
         </div>
-        <div class="col">
+        <div class="col -noflex">
             <img class="profile" src="../../assets/neha.jpeg">
         </div> 
     </div>
