--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,11 @@ header img{
     max-width: 350px;
     display: block;
 }
+#fig-img{
+    margin:auto;
+    max-width: 350px;
+    display: block;
+}
 header h3{
     color: var(--dark-gray);
 }
