feat: article tag

--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -142,8 +142,14 @@
         <h2>>an off white section</h2>
         <section class="section -ow">
             <h3>heading inside off white section</h3>
-            <p>Text defining this section & many more stuffs</p>
-            <a href="/" class="secondary-link">Secondary button</a>
+            <article class="comp-article">
+                <p>Article 1. This section has @article tag in it.</p>
+                <a href="/" class="secondary-link">Secondary button</a>
+            </article>
+            <article class="comp-article">
+                <p>Article 2. This section has @article tag in it.</p>
+                <a href="/" class="secondary-link">Secondary button</a>
+            </article>
         </section>
         <hr>
 
