--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -129,11 +129,14 @@
         <p> A section is used to separate parts of pages. In marketing websites you would have seen a header followed by sections of features, team, pricing, contact info etc.</p>
         <h2>>normal section</h2>
         <section class="section">
-            <figure>
-                <p>used <strong>@figure</strong> tag for img and<strong> @figcaption</strong> for caption.</p>
-                <img src="../../assets/blogs.svg" alt="sun" id="fig-img">
-                <figcaption>fig. caption here.</figcaption>
-            </figure>
+            <aside>
+                <figure>
+                    <img src="../../assets/blogs.svg" alt="sun" id="fig-img">
+                    <figcaption>fig. caption here.</figcaption>
+                    <p>this figure have <strong>@aside~float:right</strong> tag.</p>
+                    <p>used <strong>@figure</strong> tag for img and<strong> @figcaption</strong> for caption.</p>
+                </figure>
+            </aside>
             <h3>heading inside section</h3>
             <p>Text defining this section & many more stuffs</p>
             <a href="/" class="primary-link">Primary button</a>
