--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -118,10 +118,19 @@
         <hr>
 
         <h2>@header</h2>
-        <header>
+        <header> 
             <img src="../../assets/sun.svg" alt="sun">
             <h3>If you're <i>changing</i> the world, you're <i>working</i> on important things. You're <i>excited</i> to get up in the morning.</h3>
         </header>
+        <hr>
+
+        <h2>@main</h2>
+        <main>
+            <p>It defines site content. It is different from header and footer.</p>
+            <h3>@bdo element - Bi-Directional Override.</h3>
+            <p>This paragraph will go left-to-right.</p>  
+            <p><bdo dir="rtl">This paragraph will go right-to-left.</bdo></p> 
+        </main>
         <hr>
 
         <h2>@section</h2>
