--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -129,7 +129,14 @@
             <p>It defines site content. It is different from header and footer.</p>
             <h3>@bdo element - Bi-Directional Override.</h3>
             <p>This paragraph will go left-to-right.</p>  
-            <p><bdo dir="rtl">This paragraph will go right-to-left.</bdo></p> 
+            <p><bdo dir="rtl">This paragraph will go right-to-left.</bdo></p>
+            <br>
+
+            <h3>HTML entities</h3>
+            <p>some sybols can break your HTML code, hence we use entitties. They generally start with & symbol. Can be Entity name/number.</p>
+            <p>eg. &lt; &gt; &copy; &cent;</p>
+            <p>They are case-sensitive.</p>
+
         </main>
         <hr>
 
