fix: margin,overflow

--- a/components/blogs/component.html
+++ b/components/blogs/component.html
@@ -133,7 +133,7 @@
             <br>
 
             <h3>HTML entities</h3>
-            <p>some sybols can break your HTML code, hence we use entitties. They generally start with & symbol. Can be Entity name/number.</p>
+            <p>some symbols can break your HTML code, hence we use entities. They generally start with & symbol. Can be Entity name/number.</p>
             <p>eg. &lt; &gt; &copy; &cent;</p>
             <p>They are case-sensitive.</p>
 
