--- a/components/about/about.html
+++ b/components/about/about.html
@@ -54,7 +54,7 @@
     <section class="section -ow">
         <h3 class="colored-text -title">Skills</h3>
         <div class="about-section flex-about -row">
-            <ul class="no-bullet">
+            <ul class="skills no-bullet">
                 <li><h5>HTML5 / CSS3</h5></li>
                 <li><h5>JavaScript</h5></li>
                 <li><h5>Reactjs</h5></li>
@@ -62,7 +62,7 @@
                 <li><h5>MongoDB</h5></li>
                 
             </ul>
-            <ul class="no-bullet">
+            <ul class="skills no-bullet">
                 <li><h5>Angular</h5></li>
                 <li><h5>Bootstrap / MaterializeCSS</h5></li>
                 <li><h5>C++</h5></li>
