--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -5,6 +5,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../css/main.css" rel="stylesheet">
     <link href="../../assets/favicon.ico" rel="icon">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKKH932BTD"></script>
     <script>
@@ -145,22 +147,34 @@
                 </article>
             </li>
         </ul>
-        <footer class="footer">
-            <div>connect with me on socials
-                <ul class="no-bullet -inline">
-                    <li>
-                        <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nayyyhaa">@github</a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/nayyyhaa">@twitter</a>
-                    </li>
-                </ul>
+        
+    <footer class="footer" id="connect">
+        <header class="contact-head -head">
+            <h2>Contact Me ☎️</h2>
+        </header>
+        <div class="contact-content -content">
+            <div class="contact-socials">
+                <p>DISCUSS A PROJECT OR JUST WANT TO SAY HI? MY INBOX IS OPEN FOR ALL.</p>
+                <a href="mailto:nehaguptang.ng@gmail.com">
+                    <i class="fa fa-envelope" title="envelope" alt="envelope"></i>
+                </a>
+                <a href="https://www.github/nayyyhaa">
+                    <i class="fa fa-github" title="github" alt="github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/nayyyhaa/">
+                    <i class="fa fa-linkedin" title="linkedin" alt="linkedin"></i>
+                </a>
+                <a href="https://www.twitter.com/nayyyhaa">
+                    <i class="fa fa-twitter" title="twitter" alt="twitter"></i>
+                </a>
+                <a href="https://www.instagram.com/nehacode">
+                    <i class="fa fa-instagram" title="instagram" alt="instagram"></i>
+                </a>
             </div>
-        </footer>
-   
+            
+        </div>
+        <h3>Made with ❤️ by Neha Gupta</h3>
+    </footer>
 </body>
 
 </html>
