--- a/components/about/about.html
+++ b/components/about/about.html
@@ -12,8 +12,9 @@
 <body>
     <nav class="navigation">
         <div class="container-fluid">
-            <div class="brand-name"><i> < Neha Gupta /></i></div>
-            <ul class="no-bullet -inline">
+            <div class="brand-name"> < Neha Gupta /></div>
+            <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
+            <ul class="no-bullet nav-items -inline">
                 <li>
                     <a href="/">Home</a>
                 </li>
@@ -103,7 +104,7 @@
             </div>
             <h3>Made with ❤️ by Neha Gupta</h3>
         </footer>
-   
+    <script src="../../scripts/app.js"></script>
 </body>
 
 </html>
